background-clip:text doesn't paint correctly for inline box spanning multiple lines https://bugs.webkit.org/show_bug.cgi?id=231891

Reviewed by Alan Bujtas.

Source/WebCore:

'background-clip: text' paints to a wrong position if the inline box spans multiple lines.

Test: fast/inline/inline-background-clip-text-multiline.html

* rendering/InlineBoxPainter.cpp:
(WebCore::InlineBoxPainter::paintFillLayer):
* rendering/RenderBox.cpp:
(WebCore::RenderBox::paintFillLayer):
* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::getBackgroundRoundedRect const):
(WebCore::RenderBoxModelObject::backgroundRoundedRectAdjustedForBleedAvoidance const):

No need to pass box size separately as it now always matches the passed in border rect.

(WebCore::RenderBoxModelObject::paintFillLayerExtended):

The 'rect' parameter used to be either the border box rect of the box being painted or,
in the case of multiline inline box background image, the image strip being painted.

Make the 'rect' parameter to always be the border box and pass the background image strip
separately.

Use the background image strip only during background image painting.

* rendering/RenderBoxModelObject.h:
(WebCore::RenderBoxModelObject::paintFillLayerExtended):

LayoutTests:

* fast/inline/inline-background-clip-text-multiline-expected.html: Added.
* fast/inline/inline-background-clip-text-multiline.html: Added.


Canonical link: https://commits.webkit.org/243164@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284380 268f45cc-cd09-0410-ab3c-d52691b4dbfc